# ankiman

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.llm/: commands_verification.md
ankiman/: __init__.py  cli.py  process_file.py
ankiman/commands/: print_dict.py  process_file.py  process_text.py  tag_freq.py
ankipub/: anki_pub_gen.py
