[tool.poetry]
name = "ankiman"
version = "0.1.0"
description = ""
authors = ["Dmitry Erokhin <dmitry.erokhin@zalando.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
spacy = "^3.7.5"
pymupdf = "^1.24.7"
requests = "^2.32.3"
wordfreq = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aman = "ankiman.cli:cli"
