[tool.poetry]
name = "ankiman"
version = "1.3.0"
description = "A CLI tool for managing German vocabulary in Anki"
authors = ["Dmitry Erokhin <dmitry.erokhin@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: German",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Education :: Computer Aided Instruction (CAI)"
]
packages = [{include = "ankiman"}]
repository = "https://github.com/Dmitry-Erokhin/ankiman"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
click = "^8.1.7"
spacy = "^3.7.5"
pymupdf = "^1.24.7"
requests = "^2.32.3"
wordfreq = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ankiman = "ankiman.cli:cli"
